plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.homesweet'
version = '0.0.1-SNAPSHOT'
description = 'homesweet-back'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Core Web & Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Security / OAuth2
//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
//    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Database & Migration
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly   'com.h2database:h2'
    runtimeOnly   'com.mysql:mysql-connector-j'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // Observability
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Build-time tools
    compileOnly        'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly    'org.junit.platform:junit-platform-launcher'

    // Swagger
    implementation "io.swagger.core.v3:swagger-annotations:2.2.39"
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13"
}

tasks.named('test') {
    useJUnitPlatform()
}
